k8s/telemetry/OpenSearch/cluster-one.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-one-dashboard-ingress
  namespace: telemetry
spec:
  rules:
    - host: os-one.k8s
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cluster-one-dashboards
                port:
                  number: 5601
