k8s/telemetry/OpenSearch/omc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: telemetry
  name: omc-ingress
spec:
  rules:
    - host: omc.k8s
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: operator-ui-svc
                port:
                  number: 8080
